# tensorrt

./: CMakeLists.txt  sampleMNIST.cpp
